fix(pix-editor): change contrast for a select

--- a/pix-editor/app/styles/_sidebar.scss
+++ b/pix-editor/app/styles/_sidebar.scss
@@ -79,7 +79,7 @@
 
     .ember-power-select-trigger {
       margin: 10px 5px;
-      color: rgba(255, 255, 255, 0.5);
+      color: rgba(255, 255, 255, 0.9);
       background-color: transparent;
       border-color: rgba(255, 255, 255, 0.9);
       border-bottom: 1px solid rgba(255, 255, 255, 0.9);
